--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>GSEA</title>
+
+		<link rel="icon" type="image/png" href="assets/favicon.png">
+
+		<link href='https://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' 
+				rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<nav>
+			<a id="brand" href="#">
+					<img src="assets/logo_allwhite_128.png">
+			</a>
+			<span class="spacer"></span>	
+			<span class="nav">
+				<a href="about.html">About</a>
+				<div class="dropdown">
+					<a href="about.html">GSEA</a>
+					<a href="http://www.grinnell.edu">Grinnell College</a>
+				</div>
+			</span>
+			<span class="nav">
+				<a href="missions.html">Missions</a>
+				<div class="dropdown">
+					<a href="missions/nearspacebaloon.html">Near-Space Balloon</a>
+				</div>
+			</span>
+		</nav>
 
+		<div id="main">
+			<h1>The Grinnell Space Exploration Agency</h1>
+		</div>
+
+		<!-- JS -->
+		<script src="js/lib.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
