--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 permalink: /404.html
+layout: none
 ---
 <!DOCTYPE html>
 <html>
@@ -24,11 +25,11 @@ permalink: /404.html
 		</style>
 	</head>
 	<body>
-		<a href="http://grinnellsea.github.io">
-			<img src="assets/logo_allwhite_128.png">
+		<a href="/">
+			<img src="/assets/logo_allwhite_128.png">
 		</a> <br /> 
 		<br />
-		Sorry, the page you are looking for can't be found. <br />
+		Sorry, the page you are looking for cannot be found. <br />
 	</body>
 </html>
 
