--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@ layout: none
 	</head>
 	<body>
 		<a href="/">
-			<img src="/assets/logo_allwhite_128.png">
+			<img alt="logo" src="/assets/logo_allwhite_128.png">
 		</a> <br /> 
 		<br />
 		Sorry, the page you are looking for cannot be found. <br />
