fixed favicon problem

--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@ layout: none
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="/assets/favicon.png">
+
 		<title>404: Not Found</title>
 		<style type="text/css">
 			body {
