--- a/administration/index.html
+++ b/administration/index.html
@@ -27,7 +27,10 @@ title: Administration
                     <a href="https://docs.google.com/forms/d/1hhSpG48cjOC3B4VpkQMxftGJdfarbLL_ZKpN8BTPjto/viewform">Parts Order</a>
                 </div>
 
-                <a href="https://docs.google.com/document/d/1BPysrvO8gSOnd8NBbkP2i5snh8qwPDoDyeyJ6W0BSR4/edit?usp=sharing">Subsystem Planning Document</a>
+                <div class="restricted r_guest r_member r_admin">
+                    <a href="https://docs.google.com/document/d/1BPysrvO8gSOnd8NBbkP2i5snh8qwPDoDyeyJ6W0BSR4/edit?usp=sharing">Subsystem Planning Document</a>
+                </div>
+               
 
                 <h3>Resources</h3>
                 <a href="http://www.acq.osd.mil/se/docs/NASA-SP-2007-6105-Rev-1-Final-31Dec2007.pdf">NASA Systems Engineering Handbook</a>
